--- a/app/src/main/res/layout/detail_siswa_item.xml
+++ b/app/src/main/res/layout/detail_siswa_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -34,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rayhan Rafiud Darojat"
+                tools:text="Rayhan Rafiud Darojat"
                 android:layout_marginTop="15dp"
                 app:fontFamily="@font/roboto"
                 android:textColor="@color/colorHitam"
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:fontFamily="@font/roboto"
-                android:text="31 Januari 2019, Pukul 07.01"/>
+                tools:text="31 Januari 2019, Pukul 07.01"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -55,7 +56,7 @@
                     android:layout_marginTop="3dp"
                     android:textSize="17sp"
                     android:fontFamily="@font/roboto"
-                    android:text="Kode : A-01"/>
+                    tools:text="Kode : A-01"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
