--- a/bukusakuonline/src/main/res/layout/item_peraturan.xml
+++ b/bukusakuonline/src/main/res/layout/item_peraturan.xml
@@ -31,7 +31,7 @@
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/robotoregular"
-                    android:text="BAB 1"
+                    tools:text="BAB 1"
                     android:textSize="14sp" />
 
                 <TextView
@@ -45,7 +45,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="24dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Ketentuan Umum"
+                    tools:text="Ketentuan Umum"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
