--- a/app/src/main/res/layout-v16/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v16/fragment_dashboard.xml
@@ -25,10 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
             <LinearLayout
-                android:paddingTop="22dp"
-                android:paddingBottom="22dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+             android:layout_margin="12dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -44,6 +41,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
+
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:fontFamily="@font/roboto"
@@ -56,10 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
             <LinearLayout
-                android:paddingTop="22dp"
-                android:paddingBottom="22dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+                android:layout_margin="12dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -75,6 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:fontFamily="@font/roboto"
