--- a/bukusakuonline/src/main/res/layout/fragment_home.xml
+++ b/bukusakuonline/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:textStyle="bold"/>
-            <SearchView
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
